# Bagels

./: CHANGELOG.md  MIGRATION.md  README.md  config.yaml  hello.py  pyproject.toml  requirements.txt  run.sh
.github/workflows/: publish.yml
migration/: Readme.md  migrate_actualbudget.py
src/: app.py  config.py  constants.py  home.py  index.scss  index.tcss  provider.py  themes.py
src/bagels/: __main__.py  app.py  bagel.py  config.py  home.py  index.tcss  manager.py  provider.py  textualrun.py  versioning.py
src/bagels/components/: autocomplete.py  datatable.py  fields.py  modals.py
src/bagels/forms/: account_forms.py  category_form.py  person_forms.py  record_forms.py  recordtemplate_forms.py
src/bagels/managers/: accounts.py  categories.py  persons.py  records.py  (+1 more)
src/components/: autocomplete.py  base.py  button.py  datatable.py  fields.py  insights.py  jump_overlay.py  modals.py
src/constants/: categories.py  config.py
src/controllers/: accounts.py  categories.py  persons.py  records.py  splits.py  transactions.py  unpaid_records.py
src/models/: Transaction.py  account.py  category.py  database.py  forms.py  person.py  record.py  split.py  unpaidRecord.py
src/pages/: Accounts.py  Categories.py  Home.py  Receivables.py  Reports.py  Settings.py  Transactions.py
src/queries/: accounts.py  categories.py  persons.py  records.py  utils.py
src/templates/: default_categories.yaml  sample_entries.yaml
src/utils/: form.py  format.py  forms.py  query.py  record_forms.py  validation.py
tests/: snapshot.py
tests/managers/: test_record_template.py
(+57 files in other folders)
