[project]
name = "tui-wallet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.4.3",
    "aiohttp-jinja2==1.6",
    "aiohttp==3.10.10",
    "aiosignal==1.3.1",
    "annotated-types==0.7.0",
    "attrs==24.2.0",
    "blinker==1.8.2",
    "click==8.1.7",
    "flask-sqlalchemy==3.1.1",
    "flask==3.0.3",
    "frozenlist==1.5.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "linkify-it-py==2.0.3",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdit-py-plugins==0.4.2",
    "mdurl==0.1.2",
    "msgpack==1.1.0",
    "multidict==6.1.0",
    "platformdirs==4.3.6",
    "plotext==5.3.2",
    "propcache==0.2.0",
    "pydantic-core==2.23.4",
    "pydantic-settings-yaml>=0.2.0",
    "pydantic-settings>=2.6.1",
    "pydantic==2.9.2",
    "pygments==2.18.0",
    "pyyaml==6.0.2",
    "rich==13.9.3",
    "sqlalchemy==2.0.36",
    "textual-autocomplete==2.1.0b0",
    "textual-dev==1.6.1",
    "textual-plotext==0.2.1",
    "textual-serve==1.1.1",
    "textual==0.84.0",
    "typing-extensions==4.12.2",
    "uc-micro-py==1.0.3",
    "werkzeug==3.0.6",
    "yarl==1.16.0",
]
